--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,7 @@ a,button{cursor:pointer;}
 h1,h2,h3,h4,h5,h6,em,strong,b{font-weight:bold;}
 del,ins,u,s,a,a:hover{text-decoration:none;}
 body,textarea,input,button,select,keygen,legend{font:14px/1.5 "Microsoft Yahei",tahoma,arial,"Hiragino Sans GB",宋体;color:#333333;outline:0;}
-body{background:#fff;}
+body{background:#f4f4f4;}
 a,a:hover{color:#333333;}
 
 /* 功能样式 */
