--- a/css/base.css
+++ b/css/base.css
@@ -18,8 +18,8 @@ h1,h2,h3,h4,h5,h6,em,strong,b{font-weight:bold;}
 del,ins,u,s,a,a:hover{text-decoration:none;}
 body,textarea,input,button,select,keygen,legend{font:14px/1.5 "Microsoft Yahei",tahoma,arial,"Hiragino Sans GB",宋体;color:#333333;outline:0;}
 body{background:#f4f4f4;}
-a,a:hover{color:#333333;}
-
+a{color:#333333;}
+a:hover{color:#c2a658;}
 /* 功能样式 */
 .f-cb:after,.f-cbli li:after{display:block;clear:both;visibility:hidden;height:0;overflow:hidden;content:".";}
 .f-cb,.f-cbli li{zoom:1;}
